fix: :lipstick: Mino changes order management

--- a/src/app/pages/admin-page/order-management/order-management.component.html
+++ b/src/app/pages/admin-page/order-management/order-management.component.html
@@ -1,6 +1,5 @@
 <main class="p-4">
-    <header><button class="text-blue-500 bg-white border border-blue-500 rounded px-4 py-2">Add Product</button>
-    </header>
+    <app-management-bar [title]="title"></app-management-bar>
     <div class="bg-white shadow rounded-lg p-4 overflow-x-auto">
         <table class="min-w-full divide-y divide-gray-200">
             <thead>
