feat: :sparkles: Modal, Main Button Components added and Admin Page updated

--- a/src/app/components/sidenav/sidenav.component.html
+++ b/src/app/components/sidenav/sidenav.component.html
@@ -1,4 +1,4 @@
-<div class="sidenav flex flex-col justify-between bg-sidenav h-screen"
+<div class="sidenav flex flex-col justify-between h-full min-h-screen bg-sidenav "
     [class]="isCollapsed ? 'w-20 is-collapsed':'w-64 is-expanded'">
 
     <div>
