--- a/src/app/pages/customer-page/customer-page.component.html
+++ b/src/app/pages/customer-page/customer-page.component.html
@@ -1,4 +1,4 @@
-<div class="flex flex-auto w-full h-screen">
+<div class="flex  w-full">
     <app-sidenav></app-sidenav>
 
     <div class="flex-grow">
