--- a/src/app/components/management-bar/management-bar.component.html
+++ b/src/app/components/management-bar/management-bar.component.html
@@ -17,7 +17,7 @@
             <i class='bx bx-edit'></i>
             Edit
         </button>
-        <button
+        <button (click)="addElement()"
             class="bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600 transition duration-300 shadow-sm flex items-center">
             <i class='bx bx-plus'></i>
             Add {{title}}
