--- a/src/app/pages/admin-page/admin-page.component.html
+++ b/src/app/pages/admin-page/admin-page.component.html
@@ -1,9 +1,11 @@
-<div class="flex  w-full ">
+<div class="flex h-full w-full ">
 
     <app-sidenav></app-sidenav>
+
     <div class="flex-grow">
         <app-nav-bar></app-nav-bar>
         <router-outlet></router-outlet>
+
     </div>
 
 </div>
