--- a/src/app/pages/admin-page/customer-management/customer-management.component.html
+++ b/src/app/pages/admin-page/customer-management/customer-management.component.html
@@ -1,30 +1,24 @@
 <main class="p-4">
-    <app-management-bar [title]="title"></app-management-bar>
+    @if (isModalOpen) {
+    <app-modal [title]="title" (close)="closeModal()">
+        @for (field of customerFields; track field) {
+        <app-input [inputId]="field.name" [label]="field.header" [type]="field.type" width="100%"></app-input>
+        }
+        <div class="flex justify-center">
+            <app-main-button label="Save"></app-main-button>
+        </div>
+    </app-modal>
+    }
+    <app-management-bar (add)="openModal()" [title]="title"></app-management-bar>
     <div class="bg-white shadow rounded-lg p-4 overflow-x-auto">
         <table class="min-w-full divide-y divide-gray-200">
             <thead>
                 <tr>
+                    @for (field of customerFields; track field) {
                     <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
-                        ID Number</th>
-                    <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
-                        Username</th>
-                    <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
-                        Password</th>
-                    <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
-                        Name
+                        {{ field.header }}
                     </th>
-                    <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
-                        Last Name</th>
-                    <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
-                        Address</th>
-                    <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
-                        Postal Code</th>
-                    <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
-                        City</th>
-                    <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
-                        Telephone</th>
-                    <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
-                        Telephone Type</th>
+                    }
                 </tr>
             </thead>
 
