--- a/src/app/pages/admin-page/product-management/product-management.component.html
+++ b/src/app/pages/admin-page/product-management/product-management.component.html
@@ -1,35 +1,34 @@
 <main class="p-4">
     @if (isModalOpen) {
     <app-modal [title]="title" (close)="closeModal()">
-        <app-input inputId="customerName" label="Name" type="text" width="100%"></app-input>
+
+        @for (field of productFields; track field) {
+        <app-input [inputId]="field.name" [label]="field.header" [type]="field.type" width="100%"></app-input>}
+
+        <div class="flex justify-center">
+            <app-main-button label="Save"></app-main-button>
+        </div>
     </app-modal>
     }
+
+
     <app-management-bar (add)="openModal()" [title]="title"></app-management-bar>
+
     <div class="bg-white shadow rounded-lg p-4 overflow-x-auto">
         <table class="min-w-full divide-y divide-gray-200">
             <thead>
                 <tr>
+                    @for (field of productFields; track field) {
                     <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
-                        Name</th>
-                    <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
-                        Dimensions</th>
-                    <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
-                        Gamma
+                        {{ field.header }}
                     </th>
-                    <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
-                        Description</th>
-                    <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
-                        Supplier</th>
-                    <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
-                        Stock Quantity</th>
-                    <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
-                        Sell Price</th>
-                    <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
-                        Supplier Price</th>
+                    }
                 </tr>
             </thead>
+
+            @if (productList$ | async; as productResults) {
             <tbody class="bg-white divide-y divide-gray-200">
-                @for (product of products; track product.name) {
+                @for (product of productResults.products; track product.id) {
                 <tr>
                     <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">{{ product.name }}</td>
                     <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">{{ product.dimensions }}</td>
@@ -42,6 +41,8 @@
                 </tr>
                 }
             </tbody>
+            }
+
         </table>
     </div>
 </main>
