--- a/src/app/components/about-card/about-card.component.html
+++ b/src/app/components/about-card/about-card.component.html
@@ -1,35 +1,39 @@
 <div class="container mx-auto h-screen flex items-center justify-center p-4">
     <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-4">
-      <!-- Card 1 -->
-      <div class="bg-white rounded-lg shadow-md overflow-hidden transform transition-transform hover:scale-105 hover:shadow-lg">
-        <div class="relative h-80 sm:h-96 md:h-100 lg:h-120 xl:h-140">
-          <img src="juan.jpg" alt="Foto del desarrollador 1" class="w-full object-cover h-full rounded-t-lg">
-          <div class="absolute bottom-0 left-0 w-full h-1/3 bg-gradient-to-t from-black opacity-100">
-            <p class="text-white text-lg font-bold absolute bottom-9 left-4">Juan Pablo Cárdenas González</p>
-            <p class="text-white text-lg absolute bottom-3 left-4">Civil Engineer</p>
-          </div>
+        <!-- Card 1 -->
+        <div
+            class="bg-white rounded-lg shadow-md overflow-hidden transform transition-transform hover:scale-105 hover:shadow-lg">
+            <div class="relative h-80 sm:h-96 md:h-100 lg:h-120 xl:h-140">
+                <img src="jp.jpg" alt="Foto del desarrollador 1" class="w-full object-cover h-full rounded-t-lg">
+                <div class="absolute bottom-0 left-0 w-full h-1/3 bg-gradient-to-t from-black opacity-100">
+                    <p class="text-white text-lg font-bold absolute bottom-9 left-4">Juan Pablo Cárdenas González</p>
+                    <p class="text-white text-lg absolute bottom-3 left-4">Civil Engineer</p>
+                </div>
+            </div>
         </div>
-      </div>
-      <!-- Card 2 -->
-      <div class="bg-white rounded-lg shadow-md overflow-hidden transform transition-transform hover:scale-105 hover:shadow-lg">
-        <div class="relative h-80 sm:h-96 md:h-100 lg:h-120 xl:h-140">
-          <img src="andres.jpg" alt="Foto del desarrollador 2" class="w-full object-cover h-full rounded-t-lg">
-          <div class="absolute bottom-0 left-0 w-full h-1/3 bg-gradient-to-t from-black opacity-100">
-            <p class="text-white text-lg font-bold absolute bottom-9 left-4">Andrés Enrique Bustamante Acevedo</p>
-            <p class="text-white text-lg absolute bottom-3 left-4">Systems Engineer</p>
-          </div>
+        <!-- Card 2 -->
+        <div
+            class="bg-white rounded-lg shadow-md overflow-hidden transform transition-transform hover:scale-105 hover:shadow-lg">
+            <div class="relative h-80 sm:h-96 md:h-100 lg:h-120 xl:h-140">
+                <img src="andres.jpg" alt="Foto del desarrollador 2" class="w-full object-cover h-full rounded-t-lg">
+                <div class="absolute bottom-0 left-0 w-full h-1/3 bg-gradient-to-t from-black opacity-100">
+                    <p class="text-white text-lg font-bold absolute bottom-9 left-4">Andrés Enrique Bustamante Acevedo
+                    </p>
+                    <p class="text-white text-lg absolute bottom-3 left-4">Systems Engineer</p>
+                </div>
+            </div>
         </div>
-      </div>
-      <!-- Card 3 -->
-      <div class="bg-white rounded-lg shadow-md overflow-hidden transform transition-transform hover:scale-105 hover:shadow-lg">
-        <div class="relative h-80 sm:h-96 md:h-100 lg:h-120 xl:h-140">
-          <img src="angeli.jpg" alt="Foto del desarrollador 3" class="w-full object-cover h-full rounded-t-lg">
-          <div class="absolute bottom-0 left-0 w-full h-1/3 bg-gradient-to-t from-black opacity-100">
-            <p class="text-white text-lg font-bold absolute bottom-9 left-4">Angeli Nicole Corredor Rodríguez</p>
-            <p class="text-white text-lg absolute bottom-3 left-4">Systems Engineer</p>
-          </div>
+        <!-- Card 3 -->
+        <div
+            class="bg-white rounded-lg shadow-md overflow-hidden transform transition-transform hover:scale-105 hover:shadow-lg">
+            <div class="relative h-80 sm:h-96 md:h-100 lg:h-120 xl:h-140">
+                <img src="angeli.jpg" alt="Foto del desarrollador 3" class="w-full object-cover h-full rounded-t-lg">
+                <div class="absolute bottom-0 left-0 w-full h-1/3 bg-gradient-to-t from-black opacity-100">
+                    <p class="text-white text-lg font-bold absolute bottom-9 left-4">Angeli Nicole Corredor Rodríguez
+                    </p>
+                    <p class="text-white text-lg absolute bottom-3 left-4">Systems Engineer</p>
+                </div>
+            </div>
         </div>
-      </div>
     </div>
-  </div>
-  
+</div>
