--- a/src/app/pages/admin-page/order-management/order-management.component.html
+++ b/src/app/pages/admin-page/order-management/order-management.component.html
@@ -1,41 +1,46 @@
 <main class="p-4">
     @if (isModalOpen) {
     <app-modal [title]="title" (close)="closeModal()">
-        <app-input inputId="customerName" label="Name" type="text" width="100%"></app-input>
+
+        @for (field of orderFields; track field) {
+        <app-input [inputId]="field.name" [label]="field.header" [type]="field.type" width="100%"></app-input>}
+
+        <div class="flex justify-center">
+            <app-main-button label="Save"></app-main-button>
+        </div>
     </app-modal>
     }
+
+
     <app-management-bar (add)="openModal()" [title]="title"></app-management-bar>
+
     <div class="bg-white shadow rounded-lg p-4 overflow-x-auto">
         <table class="min-w-full divide-y divide-gray-200">
             <thead>
                 <tr>
+                    @for (field of orderFields; track field) {
                     <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
-                        Order ID</th>
-                    <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
-                        Customer ID</th>
-                    <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
-                        Order date</th>
-                    <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
-                        Estimated delivery date</th>
-                    <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
-                        Shipping date</th>
-                    <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
-                        Status ID</th>
+                        {{ field.header }}
+                    </th>
+                    }
                 </tr>
             </thead>
+
+            @if(orderList$ | async; as orderResults) {
             <tbody class="bg-white divide-y divide-gray-200">
-                @for (order of orders; track order.id) {
+                @for (order of orderResults.orders; track order.id) {
                 <tr>
                     <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">{{ order.id }}</td>
-                    <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">{{ order.customer_id }}</td>
-                    <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">{{ order.order_date }}</td>
-                    <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">{{ order.estimated_deliery_date }}
-                    </td>
-                    <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">{{ order.shipping_date }}</td>
-                    <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">{{ order.status_id }}</td>
+                    <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">{{ order.orderDate }}</td>
+                    <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">{{ order.shippingDate }}</td>
+                    <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">{{ order.estimatedDeliveryDate }}</td>
+                    <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">{{ order.status.name }}</td>
+                    <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">{{ order.customer.name }}</td>
                 </tr>
                 }
             </tbody>
+            }
+
         </table>
     </div>
 </main>
