--- a/src/app/pages/admin-page/customer-management/customer-management.component.html
+++ b/src/app/pages/admin-page/customer-management/customer-management.component.html
@@ -28,19 +28,17 @@
 
             @if(customerList$ | async; as customerResults) {
             <tbody class="bg-white divide-y divide-gray-200">
-                @for (customer of customerResults.customers; track customer.idNumber) {
+                @for (customer of customerResults.customers; track customer.id) {
                 <tr>
-                    <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">{{ customer.idNumber }}</td>
-                    <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">{{ customer.username }}</td>
-                    <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">{{ customer.password }}</td>
+                    <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">{{ customer.id }}</td>
                     <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">{{ customer.name }}</td>
                     <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">{{ customer.lastName }}</td>
                     <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">{{ customer.address }}</td>
                     <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">{{ customer.postalCode }}</td>
                     <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">{{ customer.city.name }}</td>
-                    <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">{{ customer.phone.number }}</td>
-                    <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">{{ customer.phone.phoneType.name }}
-                    </td>
+                    <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">{{ customer.customerContact.phone}}</td>
+                    <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">{{ customer.employee.name}}</td>
+                    
                 </tr>
                 }
             </tbody>
