--- a/src/app/components/ui/main-button/main-button.component.html
+++ b/src/app/components/ui/main-button/main-button.component.html
@@ -1,1 +1,3 @@
-<button class="btn bkg">{{label}}</button>
+<button class="btn bkg" [disabled]="disabled" (click)="handleClick($event)">
+    {{label}}
+</button>
