--- a/src/app/pages/admin-page/customer-management/customer-management.component.html
+++ b/src/app/pages/admin-page/customer-management/customer-management.component.html
@@ -1,13 +1,13 @@
 <main class="p-4">
     @if (isModalOpen) {
-    <app-modal [title]="title" (close)="closeModal()">
+    <app-modal label="Save" [title]="title" (close)="closeModal()">
 
         @for (field of customerFields; track field) {
         <app-input [inputId]="field.name" [label]="field.header" [type]="field.type" width="100%"></app-input>}
 
-        <div class="flex justify-center">
+        <!-- <div class="flex justify-center">
             <app-main-button label="Save"></app-main-button>
-        </div>
+        </div> -->
     </app-modal>
     }
 
@@ -36,10 +36,11 @@
                     <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">{{ customer.address }}</td>
                     <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">{{ customer.postalCode }}</td>
                     <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">{{ customer.city.name }}</td>
-                    <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">{{ customer.customerContact.phone}}</td>
+                    <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">{{ customer.customerContact.phone}}
+                    </td>
                     <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">{{ customer.employee.name}}</td>
                     <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">{{ customer.user.username}}</td>
-                    
+
                 </tr>
                 }
             </tbody>
