--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -7,29 +7,11 @@
                 <h3 class="mt-4">Sign In</h3>
                 <span>or use your account</span>
 
-                <form class="form_input" (submit)="onLogin()" [formGroup]="signInForm">
-                    <div class="h-12 relative flex rounded-xl my-8 w-[330px]">
-                        <input id="signInUsername" type="text" name="username" required formControlName="username"
-                            class="peer w-full outline-none px-4 text-base rounded-xl bg-body focus:bg-white border focus:shadow-md" />
-
-                        <label for="signInUsername"
-                            class="absolute top-1/2 left-4 px-2 rounded bg-body text-input peer-focus:top-0 peer-focus:left-3 font-light text-base peer-focus:bg-white peer-focus:text-sm peer-focus:text-mainpink peer-valid:-top-0 peer-valid:left-3 peer-valid:text-sm peer-valid:text-mainpink translate-y-[-50%] duration-150">
-                            Username
-                        </label>
-                    </div>
-                    <div class="h-12 relative flex rounded-xl my-8 w-[330px]">
-                        <input id="signInPassword" type="password" name="password" required formControlName="password"
-                            class="peer w-full outline-none px-4 text-base rounded-xl bg-body focus:bg-white border focus:shadow-md" />
-
-                        <label for="signInPassword"
-                            class="absolute top-1/2 left-4 px-2 rounded bg-body text-input peer-focus:top-0 peer-focus:left-3 font-light text-base peer-focus:bg-white peer-focus:text-sm peer-focus:text-mainpink peer-valid:-top-0 peer-valid:left-3 peer-valid:text-sm peer-valid:text-mainpink translate-y-[-50%] duration-150">
-                            Password
-                        </label>
-                    </div>
-
-                    <div class="forgot">
-                        <span>Forgot your password?</span>
-                    </div>
+                <form id="form_signIn" class="form_input" (submit)="onLogin()" [formGroup]="signInForm">
+                    <app-input type="text" inputId="usernameSignIn" label="Username"
+                               formControlName="username"></app-input>
+                    <app-input type="password" inputId="passwordSignIn" label="Password"
+                               formControlName="password"></app-input>
                     <button type="submit" class="btn bkg" [disabled]="!signInForm.valid">Sign
                         In</button>
                 </form>
@@ -39,41 +21,51 @@
             <div class="form sign_up py-2 max-h-screen">
                 <h3>Sign Up</h3>
                 <span>or use your email for register</span>
-                <form action="#" id="form_signUp" class="form_input overflow-y-auto px-4">
 
-                    <app-input type="text" inputId="nameSignUp" label="Name"></app-input>
-                    <app-input type="text" inputId="lastNameSignUp" label="Last Name"></app-input>
-                    <app-input type="text" inputId="usernameSignUp" label="Username"></app-input>
-                    <app-input type="password" inputId="passwordSignUp" label="Password"></app-input>
-                    <app-input type="email" inputId="emailSignUp" label="Email"></app-input>
-                    <app-input type="text" inputId="idNumberSignUp" label="Identification number"></app-input>
-                    <app-input type="number" inputId="telephoneSignUp" label="Telephone"></app-input>
-                    <app-input type="text" inputId="addressSignUp" label="Address"></app-input>
+                <form id="form_signUp" class="form_input overflow-y-auto px-4" (submit)="onRegister()"
+                      [formGroup]="signUpForm">
+
+                    <app-input type="text" inputId="nameSignUp" label="Name" formControlName="name"></app-input>
+                    <app-input type="text" inputId="lastNameSignUp" label="Last Name"
+                               formControlName="lastName"></app-input>
+                    <app-input type="text" inputId="usernameSignUp" label="Username"
+                               formControlName="username"></app-input>
+                    <app-input type="password" inputId="passwordSignUp" label="Password"
+                               formControlName="password"></app-input>
+                    <app-input type="email" inputId="emailSignUp" label="Email" formControlName="email"></app-input>
+                    <app-input type="text" inputId="idNumberSignUp" label="Identification number"
+                               formControlName="idNumber"></app-input>
+                    <app-input type="number" inputId="telephoneSignUp" label="Telephone"
+                               formControlName="telephone"></app-input>
+                    <app-input type="text" inputId="addressSignUp" label="Address"
+                               formControlName="address"></app-input>
 
                     <div class="flex justify-between my-8 h-12">
-                        <app-select selectId="country" name="country" label="Country" width="160px">
+                        <app-select selectId="country" name="country" label="Country" width="160px"
+                                    formControlName="country">
                             <option value="" selected disabled>Country</option>
                             <option value="colombia">Colombia</option>
                             <option value="mexico">Mexico</option>
                         </app-select>
-                        <app-select selectId="region" name="region" label="Region" width="160px">
-                            <option value="" selected disabled>Country</option>
-                            <option value="colombia">Colombia</option>
-                            <option value="mexico">Mexico</option>
+                        <app-select selectId="region" name="region" label="Region" width="160px"
+                                    formControlName="region">
+                            <option value="" selected disabled>Region</option>
+                            <option value="santander">Santander</option>
+                            <option value="jalisco">Jalisco</option>
                         </app-select>
                     </div>
 
                     <div class="flex justify-between my-8 h-12">
-                        <app-select selectId="city" name="city" label="City" width="160px">
+                        <app-select selectId="city" name="city" label="City" width="160px" formControlName="city">
                             <option value="" selected disabled>City</option>
-                            <option value="colombia">Colombia</option>
-                            <option value="mexico">Mexico</option>
+                            <option value="bucaramanga">Bucaramanga</option>
+                            <option value="guadalajara">Guadalajara</option>
                         </app-select>
                         <div class="h-12 relative flex rounded-xl w-[160px]">
-                            <input type="number" id="postalCode" required
-                                class="peer w-full outline-none px-4 text-base rounded-xl bg-body focus:bg-white border focus:shadow-md" />
+                            <input type="number" id="postalCode" formControlName="postalCode" required
+                                   class="peer w-full outline-none px-4 text-base rounded-xl bg-body focus:bg-white border focus:shadow-md" />
                             <label for="postalCode"
-                                class="absolute top-1/2 left-4 px-2 rounded bg-body text-input peer-focus:top-0 peer-focus:left-3 font-light text-base peer-focus:bg-white peer-focus:text-sm peer-focus:text-mainpink peer-valid:-top-0 peer-valid:left-3 peer-valid:text-sm peer-valid:text-mainpink translate-y-[-50%] duration-150">
+                                   class="absolute top-1/2 left-4 px-2 rounded bg-body text-input peer-focus:top-0 peer-focus:left-3 font-light text-base peer-focus:bg-white peer-focus:text-sm peer-focus:text-mainpink peer-valid:-top-0 peer-valid:left-3 peer-valid:text-sm peer-valid:text-mainpink translate-y-[-50%] duration-150">
                                 Postal Code
                             </label>
                         </div>
@@ -81,6 +73,7 @@
 
                     <button class="btn bkg">Sign Up</button>
                 </form>
+
             </div>
 
         </div>
@@ -88,7 +81,7 @@
             <div class="page page_signIn">
                 <h3>Welcome Back!</h3>
                 <button class="btn btnSign-in" (click)="toggleSignIn()">Sign Up <i
-                        class='bx bx-chevron-right'></i></button>
+                       class='bx bx-chevron-right'></i></button>
             </div>
             <div class="page page_signUp">
                 <h3>Hello Friend!</h3>
