feat: :sparkles: Edit bottom functionality implemented

--- a/src/app/pages/admin-page/product-management/product-management.component.html
+++ b/src/app/pages/admin-page/product-management/product-management.component.html
@@ -1,18 +1,5 @@
 <main class="p-4">
-    @if (isModalOpen) {
-    <app-modal [title]="title" (close)="closeModal()">
-
-        @for (field of productFields; track field) {
-        <app-input [inputId]="field.name" [label]="field.header" [type]="field.type" width="100%"></app-input>}
-
-        <div class="flex justify-center">
-            <app-main-button label="Save"></app-main-button>
-        </div>
-    </app-modal>
-    }
-
-
-    <app-management-bar (add)="openModal()" [title]="title"></app-management-bar>
+    <app-management-bar (add)="handleAdd()" (edit)="handleEdit()" [title]="title"></app-management-bar>
 
     <div class="bg-white shadow rounded-lg p-4 overflow-x-auto">
         <table class="min-w-full divide-y divide-gray-200">
@@ -29,18 +16,29 @@
             @if (productList$ | async; as productResults) {
             <tbody class="bg-white divide-y divide-gray-200">
                 @for (product of productResults.products; track product.id) {
-                <tr>
+                <tr (click)="selectProduct(product)" class="cursor-pointer hover:bg-gray-100 transition">
+                    <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">{{ product.id }}</td>
                     <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">{{ product.name }}</td>
                     <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">{{ product.gamma }}</td>
                     <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">{{ product.description }}</td>
-                    <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">{{ product.supplier }}</td>
+                    <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">{{ product.supplier.name }}</td>
                     <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">{{ product.sellPrice }}</td>
                     <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">{{ product.supplierPrice }}</td>
                 </tr>
                 }
             </tbody>
             }
-
         </table>
     </div>
+
+    <!-- Modal -->
+    @if (isModalOpen) {
+    <app-modal [label]="modalLabel" [title]="title" (close)="closeModal()">
+
+        @for (field of productFields; track field) {
+        <app-input [inputId]="field.name" [label]="field.header" [type]="field.type"
+                   [value]="selectedProduct ? selectedProduct.name : ''" width="100%"></app-input>}
+
+    </app-modal>
+    }
 </main>
