--- a/src/app/components/management-bar/management-bar.component.html
+++ b/src/app/components/management-bar/management-bar.component.html
@@ -4,21 +4,21 @@
     </div>
     <div class="flex items-center w-2/5">
         <input type="text" placeholder="Buscar"
-            class="bg-white text-gray-900 rounded-full px-4 py-2 w-full focus:outline-none shadow-sm">
+               class="bg-white text-gray-900 rounded-full px-4 py-2 w-full focus:outline-none shadow-sm">
     </div>
     <div class="flex space-x-4">
         <button
-            class="bg-white text-gray-800 px-4 py-2 rounded hover:bg-gray-300 transition duration-300 shadow-sm flex items-center">
+                class="bg-white text-gray-800 px-4 py-2 rounded hover:bg-gray-300 transition duration-300 shadow-sm flex items-center">
             <i class='bx bx-trash'></i>
             Delete
         </button>
-        <button
-            class="bg-white text-gray-800 px-4 py-2 rounded hover:bg-gray-300 transition duration-300 shadow-sm flex items-center">
+        <button (click)="editElement()" class=" bg-white text-gray-800 px-4 py-2 rounded hover:bg-gray-300 transition duration-300 shadow-sm flex
+                items-center">
             <i class='bx bx-edit'></i>
             Edit
         </button>
         <button (click)="addElement()"
-            class="bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600 transition duration-300 shadow-sm flex items-center">
+                class="bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600 transition duration-300 shadow-sm flex items-center">
             <i class='bx bx-plus'></i>
             Add {{title}}
         </button>
